# data_engineering_zoomcamp_2024

./: .gitignore
week1/: Dockerfile  note.txt  pipeline.py  pyproject.toml  upload_data.ipynb
